# pauliopt

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pylintrc  Cargo.toml  Dockerfile  Makefile  README.md  pypi-distrib-archives.bat  pypi-distrib-upload.bat  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  run-jupyter-notebook.bat  run-mypy.bat  run-pdoc.bat  run-pylint.bat  setup.py  test.py  update-local-package.bat
.github/workflows/: CI.yml  build_test.yml
docs/: index.html  pauliopt.html  search.js
docs/pauliopt/: circuits.html  clifford.html  gates.html  index.html  pauli.html  phase.html  qasm.html  topologies.html  utils.html
notebooks/: 1. Qubit Topologies.ipynb  2. Circuits of Phase Gadgets.ipynb  3. CX Circuits.ipynb  4. Phase Circuit Optimization.ipynb  5. Phase Circuit Simplification.ipynb  5. gadget_based_optimisation.ipynb  6. Pauli Polynomials.ipynb  6. Synthesis.ipynb  7. Tableaus.ipynb  8. Circuit Obfuscation.ipynb  README.md  Untitled.ipynb  readme-examples.ipynb
pauliopt/: __init__.py  circuits.py  gates.py  pauli_strings.py  qasm.py  topologies.py  utils.py
pauliopt/clifford/: tableau.py  tableau_synthesis.py
pauliopt/clifford_/: tableau_.py
pauliopt/pauli/: __init__.py  anneal.py  clifford_gates.py  clifford_region.py  clifford_tableau.py  pauli.py  summedop.py  (+3 more)
scripts/: check_imports.py
src/: lib.rs
tests/: test_circuits.py  test_cx_synthesis.py  test_pauli_annealing.py  test_pauli_propagation.py  test_pauli_representation.py  test_phase_circuit_synthesis.py  test_reverse_traversal.py  utils.py
(+86 files in other folders)
