[package]
name = "pauliopt"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "Cargo.toml"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]


[dependencies]
pyo3 = "0.20.0"
numpy = "0.20.0"
nalgebra = "0.32.3"
ndarray = "0.15.6"
